# Mac-Set-Default-Apps

./: pyproject.toml
config/: apps.yml  roles.yml
msda/: __main__.py
payload/: msda.py
